# Databricks-Apps

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: push.yml  release.yml
docs/: REPOSITORY_STRUCTURE.md
resources/: app.yml  clusters.yml  jobs.yml
scripts/: setup.bat  setup.sh
src/app/: __init__.py  app.py  app.yaml  requirements.txt
src/app/tests/: test_app.py
src/notebooks/: hello_world_notebook.py
